# first_flask

./: Makefile  README.md  pyproject.toml
first_flask/: service.py
first_flask/static/: style.css
first_flask/templates/: index.html
first_flask/templates/carts/: index.html
first_flask/templates/layouts/: layout.html
first_flask/templates/users/: delete.html  edit.html  index.html  new.html  users.html
first_flask/users/: users.py
first_flask/utils/: cookies.py  find_obj.py  get_user.py  validate.py
